# muse

./: .cursorignore  .cursorrules  .gitignore  .museattributes  .museignore  AGENTS.md  README.md  WHITE_PAPER.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.hypothesis/constants/: 01a563f36503502c  0248c5921a884132  041c1527fde5a814  0aed0276ef8799f8  101cf444c6796c4a  1100e9a3e039c1b9  115408782afe2055  13d65538b4f90bd9  18f5fe9b56324f3d  1a15e8ee0236c1c9  1d36a8b74abea9d1  1f1161f6d25c762b  20f525d6bf8daf7b  21f30e5f183c3015  22f8ae01d0e412ab  240b5cd79df51134  27833d01d84b9ea3  2ad4da6c380a142d  2b0f56be579b53b9  2bfd871e3a2f053e  2c51ffe309c7572e  2ea6b42ddf67cc85  329d15a3a872ca81  331987d89b765177  34176cf294a777d2  36fd6102cc4beaa7  3c5429410f6cfbe0  3e26bcdf26b5abdd  41f98c1a9b04090e  426a2d1c358b9210  467f1e2a9e33b236  472cdbf43f61686e  49c1683b0fd8fe75  4a9c153aec8107da  4aab0bf57a20a733  50be7c1723e0bdfe  53ca4856de15d8ae  599c62c492525e7e  59e5934d1f9fb357  5b846f4acd516e52  (+91 more)
artifacts/: code-demo.html  demo.html  domain_registry.html  index.html  midi-demo.html
completions/: _muse
docs/: README.md  agent-provenance.md  crdt-midi-rga.md  crdt-music-rga.md  entity-identity.md  music-query-dsl.md  op-log.md
docs/architecture/: architecture-plan.md  muse-e2e-demo.md  muse-vcs.md  muse_vcs.md  supercharge-plan.md
docs/demo/: README.md  demo-code.md  demo-midi.md  demo-script.md  midi-demo.md  tour-de-force-code.md  tour-de-force-music.md  tour-de-force-script.md
docs/guide/: crdt-reference.md  plugin-authoring-guide.md
docs/protocol/: muse-domain-concepts.md  muse-protocol.md  muse-variation-spec.md
docs/reference/: archive.md  auth.md  bisect.md  blame.md  cli-tiers.md  code-domain-v2.md  code-domain.md  domains.md  gc.md  hub.md  midi-domain.md  muse-attributes.md  museignore.md  omzsh-plugin.md  plumbing.md  porcelain.md  reflog.md  remotes.md  security.md  type-contracts.md  workspace.md  worktree.md
maestro/api/routes/: muse.py
maestro/db/: muse_models.py
maestro/muse_cli/: __init__.py  _repo.py  app.py  artifact_resolver.py  config.py  db.py  hub_client.py  merge_engine.py  midi_parser.py  models.py  object_store.py  repo.py
maestro/muse_cli/commands/: __init__.py  amend.py  arrange.py  ask.py  attributes.py  bisect.py  blame.py  cat_object.py  checkout.py  cherry_pick.py  chord_map.py  clone.py  commit.py  commit_tree.py  context.py  contour.py  describe.py  diff.py  divergence.py  dynamics.py  emotion_diff.py  export.py  fetch.py  find.py  form.py  grep_cmd.py  groove_check.py  harmony.py  hash_object.py  humanize.py  import_cmd.py  init.py  inspect.py  key.py  log.py  merge.py  meter.py  motif.py  open_cmd.py  play.py  (+30 more)
maestro/services/: muse_arrange.py  muse_bisect.py  muse_checkout.py  muse_checkout_executor.py  muse_cherry_pick.py  muse_context.py  muse_divergence.py  muse_drift.py  muse_emotion_diff.py  muse_find.py  muse_history_controller.py  muse_inspect.py  muse_log_graph.py  muse_log_render.py  muse_merge.py  muse_merge_base.py  muse_rebase.py  muse_replay.py  muse_reset.py  muse_restore.py  muse_revert.py  muse_stash.py  muse_tempo.py  muse_timeline.py  muse_transpose.py  muse_validate.py
muse/: __init__.py  _version.py  domain.py
muse/cli/: __init__.py  _completers.py  app.py  artifact_resolver.py  config.py  export_engine.py  guard.py  hub_client.py  midi_parser.py  models.py
muse/cli/commands/: __init__.py  agent_map.py  annotate.py  api_surface.py  archive.py  arpeggiate.py  attributes.py  auth.py  bisect.py  blame.py  branch.py  breakage.py  btc_balance.py  cat.py  (+123 more)
muse/core/: __init__.py  attributes.py  bisect.py  blame.py  coordination.py  describe.py  errors.py  gc.py  identity.py  ignore.py  indices.py  invariants.py  merge_engine.py  object_store.py  op_log.py  op_transform.py  pack.py  provenance.py  query_engine.py  rebase.py  reflog.py  repo.py  rerere.py  schema.py  snapshot.py  stat_cache.py  store.py  transport.py  validation.py  verify.py  workdir.py  workspace.py  worktree.py  xml_safe.py
muse/plugins/: __init__.py  registry.py
tests/: cli_test_helper.py  test_annotate_command.py  test_bitcoin_analytics.py  test_bitcoin_plugin.py  test_callgraph.py  test_cli_auth.py  test_cli_clone.py  test_cli_coverage_gaps.py  test_cli_fetch_push.py  test_cli_hub.py  test_cli_log.py  test_cli_new_commands.py  test_cli_plugin_dispatch.py  test_cli_plumbing.py  test_cli_remote.py  test_cli_reset_revert.py  test_cli_show.py  test_cli_workflow.py  test_cmd_archive.py  test_cmd_bisect.py  test_cmd_branch.py  test_cmd_bundle.py  test_cmd_checkout.py  test_cmd_cherry_pick.py  test_cmd_clean.py  test_cmd_commit.py  test_cmd_config.py  test_cmd_content_grep.py  test_cmd_describe.py  test_cmd_diff.py  test_cmd_gc.py  test_cmd_log.py  test_cmd_merge.py  test_cmd_rebase.py  test_cmd_reflog.py  test_cmd_reset_revert.py  test_cmd_shortlog.py  test_cmd_show.py  test_cmd_snapshot.py  test_cmd_stash.py  (+136 more)
tests/e2e/: muse_fixtures.py  test_maestro_muse_integration.py  test_muse_e2e_harness.py  test_muse_golden_path.py
tests/muse_cli/: conftest.py  test_amend.py  test_arrange.py  test_artifact_resolver.py  test_ask.py  test_bisect.py  test_blame.py  test_cat_object.py  test_checkout.py  test_cherry_pick.py  test_cli_skeleton.py  test_clone.py  test_commit.py  test_commit_tree.py  test_context.py  test_describe.py  test_export.py  test_fetch.py  test_find.py  test_harmony.py  test_hash_object.py  test_hub_client.py  test_import.py  test_init.py  test_inspect.py  test_log.py  test_log_flags.py  test_merge.py  test_merge_engine.py  test_merge_integration.py  test_meter.py  test_open.py  test_play.py  test_pull.py  test_push.py  test_read_tree.py  test_recall.py  test_remote.py  test_render_preview.py  test_repo.py  (+14 more)
tests/test_tourdeforce/: test_muse_client.py
tools/: README.md  demo.py  git2muse.py  install-omzsh-plugin.sh  render_domain_registry.py  render_html.py  render_index.py  render_midi_demo.py  tour_de_force.py  typing_audit.py
tools/omzsh-plugin/: README.md  _muse  muse.plugin.zsh
tourdeforce/clients/: muse.py
(+111 files in other folders)
