[project]
name = "muse"
version = "0.1.1"
description = "Muse — domain-agnostic version control for multidimensional state"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "toml>=0.10.0",
    "mido>=1.3.0",
]

[project.scripts]
muse = "muse.cli.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["muse"]
omit = [
    # Hub/remote authentication — future feature, requires network fixtures
    "muse/cli/config.py",
    # MIDI binary parser — requires MIDI fixture files to test meaningfully
    "muse/cli/midi_parser.py",
    # Backward-compat re-export shim — trivially thin wrapper
    "muse/cli/models.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true
# Exclude deferred files not yet ported to the strict typed surface.
exclude = [
    "muse/plugins/music/services/",
    "muse/cli/commands/emotion_diff\\.py",
    "muse/cli/commands/groove_check\\.py",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["mido", "toml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["muse"]
