[project]
name = "muse"
version = "0.1.5"
description = "Muse — domain-agnostic version control for multidimensional state"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.0",
    "mido>=1.3.3",
    "defusedxml>=0.7.1",
    # tree-sitter: professional AST parsing for the code domain plugin.
    # Used by GitHub Copilot, VS Code, Neovim, and Zed — the industry standard.
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-kotlin>=1.1.0",
    # Prose and web language grammars.
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-css>=0.25.0",
    # Swift: py-tree-sitter-swift must be built from source; omitted here to
    # avoid breaking CI on machines without Xcode CLT.  Install manually with:
    #   pip install py-tree-sitter-swift
    # The adapter degrades gracefully to file-level tracking without it.
]

[project.scripts]
muse = "muse.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "anyio>=4.12.0",
    "mypy>=1.19.1",
    "hypothesis>=6.100.0",
    "types-defusedxml>=0.7.0.20240218",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/pytest_cache"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["muse"]
omit = [
    # Hub/remote authentication — future feature, requires network fixtures
    "muse/cli/config.py",
    # MIDI binary parser — requires MIDI fixture files to test meaningfully
    "muse/cli/midi_parser.py",
    # Backward-compat re-export shim — trivially thin wrapper
    "muse/cli/models.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true
# Exclude deferred files not yet ported to the strict typed surface.
exclude = [
    "muse/plugins/music/services/",
    "muse/cli/commands/emotion_diff\\.py",
    "muse/cli/commands/groove_check\\.py",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["mido"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tree-sitter and its grammar packages ship compiled C extensions.  The core
# package (tree_sitter) provides py.typed stubs when run via `python -m mypy`
# from the project venv, but a globally-installed mypy cannot resolve them.
# Grammar packages never ship stubs.  Marking all of them ignore_missing_imports
# keeps both invocation styles green; the venv mypy still validates our usage
# against the stubs when they are findable (CI).
module = [
    "tree_sitter",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
    "tree_sitter_java",
    "tree_sitter_go",
    "tree_sitter_rust",
    "tree_sitter_c",
    "tree_sitter_cpp",
    "tree_sitter_c_sharp",
    "tree_sitter_ruby",
    "tree_sitter_kotlin",
    "tree_sitter_markdown",
    "tree_sitter_html",
    "tree_sitter_css",
    "py_tree_sitter_swift",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["muse"]
